--- a/index.html
+++ b/index.html
@@ -7,11 +7,50 @@
     </head>
     <body>
         <h1> Hands On Orlando </h1>
+            <p>Our mission: Help people, nonprofits and businesses save time, money, and maximize their positive impacts through Hands On volunteer action to change lives across Central Florida.   
+            </p>
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Active</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Home
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">About HOO</a></li>
+                    </ul>
+                  </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Donate</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Volunteer
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Volunteer Calendar</a></li>
+                      <li><a class="dropdown-item" href="#">Court Ordered Volunteers</a></li>
+                      <li><a class="dropdown-item" href="#">Scholars on Service</a></li>
+                      <li><a class="dropdown-item" href="#">Task Leader @ HOO</a></li>
+                      <li><a class="dropdown-item" href="#">Corporate Volunteering</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Local Businesses</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Hands On Park</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Blog</a>
+                  </li>
+              </ul>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <footer>
+            
+        </footer>
     </body>
-    <footer>
-        
-    </footer>
 </Html>
