--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <link href="css/style.css" rel=" stylesheet" type="text/css">
     </head>
     <body>
-        <h1> Hands On Orlando </h1>
-            <p>Our mission: Help people, nonprofits and businesses save time, money, and maximize their positive impacts through Hands On volunteer action to change lives across Central Florida.   
+    <section class="top-Header">
+        <h1> Hands On Orlando
+        </h1>
+            <p class="mission-Statement">Our mission: Help people, nonprofits and businesses save time, money, and maximize their positive impacts through Hands On volunteer action to change lives across Central Florida.   
             </p>
+    </section>
             <ul class="nav justify-content-center">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Active</a>
-                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Home
