Made changes to text

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="row ">
             <div class="col-lg-6"><img src="images/Volunteer Opprotunities.png" alt=""></div>
             <div class="col-lg-6 col-sm-12"><h2>Volunteer Opportunities</h2>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+              <p>We help people save time and stress by providing high quality volunteer programs that will help more people to give their time. </p></div>
             <div class="col"></div>
             <div class="col-lg-6 col-sm-12"><button type="button" class="btn btn-warning button4">Send</button></div>
           </div>
@@ -144,8 +144,8 @@
         <div class="container text-left">
           <div class="row ">
             <div class="col-lg-6"><img src="images/Hands On Park.png" alt=""></div>
-            <div class="col-lg-6 col-sm-12"><h2>Volunteer Opportunities</h2>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+            <div class="col-lg-6 col-sm-12"><h2>Hands On Park</h2>
+              <p>Hands On Park is a unique and innovative 15 acres of lake front land in the City of Orlando. Our aim is for people to reconnect with nature, learn about the local environment and participate in Hands On activities that include STEAM related events.</p></div>
             <div class="col"></div>
             <div class="col-lg-6 col-sm-12"><button type="button" class="btn btn-warning button4">Send</button></div>
           </div>
@@ -154,8 +154,8 @@
         <div class="container text-left">
           <div class="row ">
             <div class="col-lg-6"><img src="images/Local Businesses.png" alt=""></div>
-            <div class="col-lg-6 col-sm-12"><h2>Volunteer Opportunities</h2>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+            <div class="col-lg-6 col-sm-12"><h2>Local Businesses</h2>
+              <p>The goal of the CFSA is to provide hands-on experiences, during times that are convenient for the business and on a regular enough basis to make sustainable, positive impacts in Central Florida.</p></div>
             <div class="col"></div>
             <div class="col-lg-6 col-sm-12"><button type="button" class="btn btn-warning button4">Send</button></div>
           </div>
@@ -164,8 +164,8 @@
         <div class="container text-left">
           <div class="row ">
             <div class="col-lg-6"><img src="images/Corporate Volunteeriing.png" alt=""></div>
-            <div class="col-lg-6 col-sm-12"><h2>Volunteer Opportunities</h2>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+            <div class="col-lg-6 col-sm-12"><h2>Corporate Volunteering & Team Building</h2>
+              <p>Hands On Orlando is Central Florida's leader in managing corporate volunteer projects. The goal: helping the community by impacting the lives of people who need your help across Central Florida.</p></div>
             <div class="col"></div>
             <div class="col-lg-6 col-sm-12"><button type="button" class="btn btn-warning button4">Send</button></div>
           </div>
@@ -269,7 +269,7 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 text-center">
           <!-- Content -->
-          <img class="footer-Logo" src="../Group-3-Final-Project/images/hoo_logo.png" alt="HOO-Logo">
+          <img class="footer-Logo" src="images/hoo_logo.png" alt="HOO-Logo">
           <h6 class="text-uppercase fw-bold mb-4">
             <i class="brand-Text">Hands On Orlando</i>
           </h6>
