--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="top-Header">
         <img class="header-Logo" src="images/hoo_logo.png" alt="HOO Logo">
         <h1> Hands On Orlando</h1>
-            <p class="mission-Statement">Our mission: Help people, nonprofits and businesses save time, money, and maximize their positive impacts through Hands On volunteer action to change lives across Central Florida.   
+            <p class="mission-Statement">Our mission: Help people, nonprofits and businesses save time, money, and maximize their positive impacts through hands on volunteer action to change lives across Central Florida.
             </p>
             <ul class="nav justify-content-center nav-tabs nav-fill">
                 <li class="nav-item dropdown">
@@ -335,5 +335,7 @@
 <!-- Footer -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+  <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "4RcYZ77MdK");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript>
+
   </body>
 </Html>
